--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 
 <td>
 <p>
-I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and Machine Learning (ML) based attacks on encrypted design, and metrics for evaluating and guiding trustworthy design.
+I am Kaixin Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and Machine Learning (ML) based attacks on encrypted design, metrics for evaluating and guiding trustworthy design, and design space exploration for risk-free hardware design.
 
 
 <!--Welcome to my blog! I am 杨凯欣 (Kaixin Yang, pronounced as /kæ'ʃɪn jʌŋ/, and please feel free to call me Cayson), a third year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at USC, advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. -->
@@ -45,6 +45,7 @@ I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href=
 
 <h3 style="text-align:left">NEWS</h3>
 
+<p>[Mar. 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been accepted in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).
 <p>[Apr. 2022][Award] I have been selected to participate in the Young Fellows program promoted by the Design Automation Conference (DAC).</p>
 
 {% include footer.html %}
