--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@ layout: page
     Lab Introduction
 </h2>
 <p>
-We have two subgroups, focusing on cyber-physical system design and trustworthy SoC design respectively. Trustworthy SoC design group now is interested in logic encryption attack and defense methods on gate-level netlists, as well as the evaluation metrics and general models.
+We have two subgroups, focusing on cyber-physical system design and trustworthy SoC design respectively. 
 </p>
 
 <h2>
@@ -33,6 +33,14 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 
 
 <h1>Publications</h1>
+
+<h2>Journal Paper</h2>
+
+<p>
+	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>," in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Mar. 2023.
+</p>
+
+<h2>Conference Papers</h2>
 
 <p>
 	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.
