--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 
 <td>
 <p>
-I am Kaixin Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and Machine Learning (ML) based attacks on encrypted design, metrics for evaluating and guiding trustworthy design, and design space exploration for risk-free hardware design.
+I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design, as well as machine learning (ML)-based approaches to them. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and ML-based attacks on encrypted design, secure high level synthesis, metrics for evaluating and guiding trustworthy design, and design space exploration for risk-free hardware design.
 
 
 <!--Welcome to my blog! I am 杨凯欣 (Kaixin Yang, pronounced as /kæ'ʃɪn jʌŋ/, and please feel free to call me Cayson), a third year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at USC, advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. -->
@@ -26,11 +26,10 @@ I am Kaixin Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://
 <h3 style="text-align:left">EXPERIENCE</h3>
 
 <p>Aug 2020 - Present | Research Assistant, USC</p>
-<p>Aug-Dec 2022 | Project Mentor, <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a>, USC</p>
-<p>Jun-Jul 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</p>
 <p>Jan-May 2022 | Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</p>
 <p>Aug-Dec 2021 | Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</p>
-<p>Aug-Dec 2021 | Project Mentor, <a href="https://classes.usc.edu/term-20213/classes/ee">EE581</a>, USC</p>
+<p>Aug-Dec 2022, Aug-Dec 2021 | Project Mentor, <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a>, USC</p>
+<p>Jun-Jul 2023, Jun-Jul 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</p>
 
 <h3 style="text-align:left">EDUCATION</h3>
 
@@ -45,8 +44,10 @@ I am Kaixin Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://
 
 <h3 style="text-align:left">NEWS</h3>
 
-<p>[Mar. 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been accepted in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).
-<p>[Apr. 2022][Award] I have been selected to participate in the Young Fellows program promoted by the Design Automation Conference (DAC).</p>
+<p>[Apr 2023][Paper] Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</p>
+<p>[Mar 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</p>
+<p>[Feb 2023][Paper] Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</p>
+<p>[Apr 2022][Award] I have been selected to participate in the Young Fellows program promoted by the 59h Design Automation Conference (DAC).</p>
 
 {% include footer.html %}
 
