--- a/research.html
+++ b/research.html
@@ -43,6 +43,10 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 <h2>Conference Papers</h2>
 
 <p>
+	D. Chen, X. Zhou, Y. Hu, Y. Zhang, K. Yang, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>," International Symposium on Quality Electronic Design (ISQED), Apr. 2023.
+</p>
+
+<p>
 	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.
 </p>
 
