--- a/research.html
+++ b/research.html
@@ -34,6 +34,12 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 
 <h1>Publications</h1>
 
+<h2>Book Chapter</h2>
+
+<p>
+	Y. Hu, K. Yang, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.
+</p>
+
 <h2>Journal Paper</h2>
 
 <p>
@@ -52,10 +58,6 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 
 <p>
 	S. Dutta Chowdhury, K. Yang, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9643498">ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering</a>," Proc. Int. Conf. Computer Aided Design (ICCAD), pp. 1-9, Nov. 2021.
-</p>
-
-<p>
-	Y. Hu, K. Yang, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.
 </p>
 
 <p>
