--- a/links.html
+++ b/links.html
@@ -8,3 +8,11 @@ Links to my friends' blogs:
 <a href="{{friend.href}}">{{friend.title}}</a>
 {% endfor %}
 
+Fugoes is the most talented genius I have ever known. He is a professional in mathematics, physics, and software. Discussion with him is always exciting and inspiring.
+
+yzhan is a reliable and thoughtful friend. He is enthusiastic about his research. As roommates in PKU, the life of studying, playing, and eating with him is a treasure to me.
+
+Richsoap is full of interesting and surprising ideas. He is always willing to learn new skills, experience new challenges, and enjoy life. He never waits if he decides.
+
+Yinghua is reliable and humorous. I learned a lot about conducting academic research and dealing with colleagues. I always appreciate the support from his family during my Ph.D. life, especially during the pandemic. 
+
