--- a/links.html
+++ b/links.html
@@ -3,12 +3,13 @@ title: Links
 layout: page
 ---
 
-Links to my friends' blogs:
+<p>Links to my friends' blogs:
 {% for friend in site.friends %}
 <a href="{{friend.href}}">{{friend.title}}</a>
 {% endfor %}
+</p>
 
-<p>Fugoes is the most talented genius I have ever known. He is a professional in mathematics, physics, and software. Discussion with him is always exciting and inspiring.</p>
+<p>Fugoes is a genius. He is a professional in mathematics, physics, and software. He is also rational and erudite. Discussion with him is always exciting and inspiring.</p>
 
 <p>yzhan is a reliable and thoughtful friend. He is enthusiastic about his research. As roommates in PKU, the life of studying, playing, and eating with him is a treasure to me.</p>
 
