--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.e
 
 <h3 style="text-align:left">NEWS</h3>
 
+<p>[Apr 2023][Paper] Our paper "Similarity-Based Logic Locking Against Machine Learning Attacks" has been accepted at Design Automation Conference (DAC) 2023.
 <p>[Apr 2023][Paper] Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</p>
 <p>[Mar 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</p>
 <p>[Feb 2023][Paper] Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</p>
