--- a/research.html
+++ b/research.html
@@ -49,6 +49,10 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 <h2>Conference Papers</h2>
 
 <p>
+	S. D. Chowdhury, K. Yang, P. Nuzzo, "Similarity-Based Logic Locking Against Machine Learning Attacks," Design Automation Conference (DAC), 2023.
+</p>
+
+<p>
 	D. Chen, X. Zhou, Y. Hu, Y. Zhang, K. Yang, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>," International Symposium on Quality Electronic Design (ISQED), Apr. 2023.
 </p>
 
