--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.e
 <p>Aug 2020 - Present | Research Assistant, USC</p>
 <p>Jan-May 2022 | Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</p>
 <p>Aug-Dec 2021 | Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</p>
-<p>Aug-Dec 2022, Aug-Dec 2021 | Project Mentor, <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a>, USC</p>
+<p>Jul-Aug 2023| <a href="https://viterbiundergrad.usc.edu/diversity/center-for-engineering-diversity/vsi/">VSI</a> Program Mentor, USC</p>
 <p>Jun-Jul 2023, Jun-Jul 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</p>
+<p>Aug-Dec 2022, Aug-Dec 2021 | <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a> Project Mentor, USC</p>
 
 <h3 style="text-align:left">EDUCATION</h3>
 
@@ -44,7 +45,7 @@ I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.e
 
 <h3 style="text-align:left">NEWS</h3>
 
-<p>[Apr 2023][Paper] Our paper "Similarity-Based Logic Locking Against Machine Learning Attacks" has been accepted at Design Automation Conference (DAC) 2023.
+<p>[Apr 2023][Paper] Our paper "<a href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>" has been accepted at Design Automation Conference (DAC) 2023.</p>
 <p>[Apr 2023][Paper] Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</p>
 <p>[Mar 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</p>
 <p>[Feb 2023][Paper] Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</p>
