--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@ Chanwook Oh, <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-ch
 <a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin (Chia-Ming) Chang, Matthew Low, 
 <a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a>, and me<br/>
 Alumni:
-Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a> (PhD, Synopsys)
+Nathan Dahlin (Ph.D., Assistant professor at ECE, SUNY Albany), Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a> (PhD, Synopsys)
 </p>
 
 
@@ -49,7 +49,7 @@ Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/
 <h2>Conference Papers</h2>
 
 <p>
-	S. D. Chowdhury, K. Yang, P. Nuzzo, "Similarity-Based Logic Locking Against Machine Learning Attacks," Design Automation Conference (DAC), 2023.
+	S. D. Chowdhury, K. Yang, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>," Design Automation Conference (DAC), 2023.
 </p>
 
 <p>
