updated homepage, research page, and CV

--- a/research.html
+++ b/research.html
@@ -11,44 +11,86 @@ layout: page
 </h1>
 
 <h2>
+    Lab News
+</h2>
+<p>
+Our lab has moved to UC Berkeley. Prof. Nuzzo is accepting new students. Please feel free to visit <a class="link" href="https://www2.eecs.berkeley.edu/Faculty/Homepages/pnuzzo.html">his website</a> to learn more about his research and how to apply.
+
+<h2>
     Lab Introduction
 </h2>
 <p>
-We have two subgroups, focusing on cyber-physical system design and trustworthy SoC design respectively. 
+We focus on cyber-physical system design and trustworthy SoC design. 
 </p>
 
 <h2>
     Lab Members
 </h2>
-<p>
-Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
-Postdoc: Michele Lora, Luca Geretti, Dengwang Tang<br/>
-Ph.D. students: 
-Chanwook Oh, <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
-<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin (Chia-Ming) Chang, Matthew Low, 
-<a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a>, and me<br/>
-Alumni:
-Nathan Dahlin (Ph.D., Assistant professor at ECE, SUNY Albany), Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a> (PhD, Synopsys)
-</p>
+<ul>
+	<li>Advisor: <a class="link" href="https://www2.eecs.berkeley.edu/Faculty/Homepages/pnuzzo.html">Prof. Pierluigi Nuzzo</a></li>
+	<li>Ph.D. students: 
+		<ul>
+			<li>Nikhil Vijay Naik</li> 
+			<li>Kaixin Yang (me)</li>
+			<li><a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a></li>
+			<li>Kevin (Chia-Ming) Chang</li>
+			<li>Matthew Low</li>
+			<li><a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a></li>
+		</ul>
+	</li>
+</ul>
 
+<h2>
+    Alumni
+</h2>
+<ul>
+	<li>Postdoc: 
+		<ul>
+			<li>Dhruva Kartik (Amazon)</li>
+			<li>Michele Lora (Assistant Professor, DIMI, University of Verona, Italy)</li>
+			<li>Luca Geretti (Assistant Professor, CS, University of Verona, Italy)</li>
+			<li>Dengwang Tang (eBay)</li>
+		</ul>
+	</li>
+	<li>Ph.D.: 
+		<ul>
+			<li>Nathan Dahlin (Assistant professor at ECE, SUNY Albany)</li>
+			<li><a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a> (Synopsys)</li>
+			<li>Krishna Chaitanya Kalagaria (Postdoctoral Scholar, University of New Mexico)</li>
+			<li>Chanwook Oh (Apple)</li>
+			<li><a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a> (AMD)</li>	
+			<li>Muhammad Waqas (Zoox)</li>
+		</ul>
+	</li>
+</ul>
 
-<h1>Publications</h1>
+<h1><a class="link" href="https://scholar.google.com/citations?hl=en&user=B2lxJR0AAAAJ&view_op=list_works&sortby=pubdate">Publications</a></h1>
 
 <h2>Book Chapter</h2>
 
-<p>
-	Y. Hu, K. Yang, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.
-</p>
+<ol>
+	<li>Y. Hu, <b>K. Yang</b>, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.</li>
+</ol>
 
 <h2>Journal Paper</h2>
 
-<p>
-	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>," in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Mar. 2023.
-</p>
+<ol>
+	<li>Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>," in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Mar. 2023.</li>
+</ol>
 
 <h2>Conference Papers</h2>
 
-<p>
+<ol>
+	<li>Y. Hu, <b>K. Yang</b>, S. Dutta Chowdhury, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2403.01789">DECOR: Enhancing Logic Locking Against Machine Learning-Based Attacks</a>, International Symposium on Quality Electronic Design(ISQED), Apr. 2024.</li>
+	<li>S. D. Chowdhury, <b>K. Yang</b>, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>," Design Automation Conference (DAC), Jul. 2023.</li>
+	<li>D. Chen, X. Zhou, Y. Hu, Y. Zhang, <b>K. Yang</b>, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>," International Symposium on Quality Electronic Design (ISQED), Apr. 2023.</li>
+	<li>Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.</li>
+	<li>S. Dutta Chowdhury, <b>K. Yang</b>, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9643498">ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering</a>," Proc. Int. Conf. Computer Aided Design (ICCAD), pp. 1-9, Nov. 2021.</li>
+	<li>Y. Hu, <b>K. Yang</b>, S. D. Chowdhury and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>," Proc. IEEE/ACM Design Automation and Testing in Europe Conf. (DATE), pp. 1182-1185, Feb. 2021.</li>
+	<li>Y. Hu, <b>K. Yang</b>, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," Proc. IFIP/IEEE Int. Conf. Very Large-Scale Integration (VLSI-SoC), pp. 129-134, Oct. 2020.</li>
+</ol>
+
+<!-- <p>
 	S. D. Chowdhury, K. Yang, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>," Design Automation Conference (DAC), 2023.
 </p>
 
@@ -71,7 +113,7 @@ Nathan Dahlin (Ph.D., Assistant professor at ECE, SUNY Albany), Dhruva Kartik (P
 <p>
 	Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," Proc. IFIP/IEEE Int. Conf. Very Large-Scale Integration (VLSI-SoC), pp. 129-134, Oct. 2020.
 </p>
-
+ -->
 
 
 <!--
