--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Home
 <table>
 <tbody>
 <tr>
-<td>
+<td style="width: 36%;">
 {% include header.html %}
 </td>
 
-<td>
+<td style="width: 36%;">
 <p>
-I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design, as well as machine learning (ML)-based approaches to them. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and ML-based attacks on encrypted design, secure high level synthesis, metrics for evaluating and guiding trustworthy design, and design space exploration for risk-free hardware design.
+I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/pnuzzo.html">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design, as well as machine learning (ML)-based approaches to them. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and ML-based attacks on encrypted design, secure high level synthesis, metrics for evaluating and guiding trustworthy design, and design space exploration for risk-free hardware design.
 
 
 <!--Welcome to my blog! I am 杨凯欣 (Kaixin Yang, pronounced as /kæ'ʃɪn jʌŋ/, and please feel free to call me Cayson), a third year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at USC, advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. -->
@@ -22,34 +22,116 @@ I am Kaixin Yang (杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.e
 </tbody>
 </table>
 
+<h3 style="text-align:left">EDUCATION</h3>
+
+<table>
+	<tbody>
+		<tr>
+			<th>2025</th>
+			<th>Ph.D. student, Computer Engineering, USC</th>
+		</tr>
+		<tr>
+			<th>2021</th>
+			<th>Master's Degree, Electrical Engineering, USC</th>
+		</tr>
+		<tr>
+			<th>2019</th>
+			<th>Bachelor's Degree, Electronic and Information Science and Technology, Peking University</th>
+		</tr>
+	</tbody>
+</table>
+
+<!-- <p>2024 | Ph.D. student, Computer Engineering, USC</p>
+<p>2021 | Master's Degree, Electrical Engineering, USC</p>
+<p>2019 | Bachelor's Degree, Electronic and Information Science and Technology, Peking University</p> -->
 
 <h3 style="text-align:left">EXPERIENCE</h3>
 
-<p>Aug 2020 - Present | Research Assistant, USC</p>
+<table>
+	<tbody>
+		<tr>
+			<th>May 2024 - Present</th>
+			<th>CAD Intern, Intel</th>			
+		</tr>
+		<tr>
+			<th>Aug 2020 - Present</th>
+			<th>Research Assistant, USC</th>
+		</tr>
+		<tr>
+			<th>Spring 2022</th>
+			<th>Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</th>
+		</tr>
+		<tr>
+			<th>Spring 2019</th>
+			<th>Teaching Assistant, Practice for Programming, PKU</th>
+		</tr>
+		<tr>
+			<th>Fall 2021</th>
+			<th>Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</th>
+		</tr>
+		<tr>
+			<th>Summer 2023</th>
+			<th><a href="https://viterbiundergrad.usc.edu/diversity/center-for-engineering-diversity/vsi/">VSI</a> Program Mentor, USC</th>
+		</tr>
+		<tr>
+			<th>Summer 2023, Summer 2022</th>
+			<th><a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</th>
+		</tr>
+		<tr>
+			<th>Spring 2024, Fall 2022, Fall 2021</th>
+			<th><a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a> Project Mentor, USC</th>
+		</tr>
+	</tbody>
+</table>
+
+<!-- <p>Aug 2020 - Present | Research Assistant, USC</p>
 <p>Jan-May 2022 | Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</p>
 <p>Aug-Dec 2021 | Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</p>
 <p>Jul-Aug 2023| <a href="https://viterbiundergrad.usc.edu/diversity/center-for-engineering-diversity/vsi/">VSI</a> Program Mentor, USC</p>
 <p>Jun-Jul 2023, Jun-Jul 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</p>
-<p>Aug-Dec 2022, Aug-Dec 2021 | <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a> Project Mentor, USC</p>
+<p>Aug-Dec 2022, Aug-Dec 2021 | <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a> Project Mentor, USC</p> -->
 
-<h3 style="text-align:left">EDUCATION</h3>
 
-<p>2024 | Ph.D. student, Computer Engineering, USC</p>
-<p>2021 | Master's Degree, Electrical Engineering, USC</p>
-<p>2019 | Bachelor's Degree, Electronic and Information Science and Technology, Peking University</p>
 
-<h3 style="text-align:left">AWARD</h3>
+<h3 style="text-align:left">HONORS AND AWARDS</h3>
 
-<p>2022 | DAC Young Fellow</p>
+<table>
+	<tbody>
+		<tr>
+			<th>2022</th>
+			<th>DAC Young Fellow</th>
+		</tr>
+		<tr>
+			<th>2019</th>
+			<th>Annenberg Fellowship</th>
+		</tr>
+	</tbody>
+</table>
+
+<!-- <p>2022 | DAC Young Fellow</p>
 <p>2019 | Annenberg Fellowship</p>
+ -->
 
 <h3 style="text-align:left">NEWS</h3>
 
-<p>[Apr 2023][Paper] Our paper "<a href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>" has been accepted at Design Automation Conference (DAC) 2023.</p>
-<p>[Apr 2023][Paper] Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</p>
-<p>[Mar 2023][Paper] Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</p>
-<p>[Feb 2023][Paper] Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</p>
-<p>[Apr 2022][Award] I have been selected to participate in the Young Fellows program promoted by the 59h Design Automation Conference (DAC).</p>
+<ul style="list-style-type: none;">
+	<li>May 2024: I will join Intel as a CAD intern.</li>
+	<li>Apr 2024: Our paper "<a href="https://arxiv.org/abs/2403.01789">DECOR: Enhancing Logic Locking Against Machine Learning-Based Attacks</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2024.</li>
+	<li>Apr 2023: Our paper "<a href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>" has been accepted at Design Automation Conference (DAC) 2023.</li>
+	<li>Apr 2023: Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</li>
+	<li>Mar 2023: Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</li>
+	<li>Feb 2023: Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</li>
+	<li>Apr 2022: I have been selected to participate in the Young Fellows program promoted by the 59h Design Automation Conference (DAC).</li>
+	<li> ----- News starts from Apr 2022 -----
+</ul>
+
+
+
+<!-- <p>Apr 2023: Our paper "<a href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>" has been accepted at Design Automation Conference (DAC) 2023.</p>
+<p>Apr 2023: Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design(ISQED) 2023.</p>
+<p>Mar 2023: Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</p>
+<p>Feb 2023: Our paper introducing a new logic locking technique leveraging similarity between gates or wires to mitigate machine learning-based attacks has been accepted at Design Automation Conference (DAC) 2023.</p>
+<p>Apr 2022: I have been selected to participate in the Young Fellows program promoted by the 59h Design Automation Conference (DAC).</p> -->
 
 {% include footer.html %}
 
