--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,8 @@ title: Gallery
 ---
 
 <h1>Gallery</h1>
-<h2>Miami</h2>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_1.jpg?raw=true" height = "100" alt="south_beach_1" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_2.jpg?raw=true" height = "100" alt="south_beach_2" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_3.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_3.jpg?raw=true" height = "100" alt="south_beach_3" /></a>
-<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/miami.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/miami.jpg?raw=true" height = "100" alt="miami" /></a>
-
-<h2>Los Angeles</h2>
+<h2>United States</h2>
+<h3>Los Angeles</h3>
 <p>Santa Monica</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_1.jpg?raw=true" height = "100" alt="santa_monica_1" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/santa_monica_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/santa_monica_2.jpg?raw=true" height = "100" alt="santa_monica_2" /></a>
@@ -36,16 +31,30 @@ title: Gallery
 <p>Big Bear Lake</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "150" height = "100" alt="a_leaf_at_big_bear_lake" /></a>
 
-<h2>San Franciso</h2>
+<h3>San Franciso</h3>
 <p>Golden State Bridge</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/san_francisco/golden_state_bridge.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.jpg?raw=true" width = "150" height = "100" alt="golden_state_bridge" /></a>
 
-<h2>Monterey</h2>
+<h3>Monterey</h3>
 <p>Monterey Bay Aquarium</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/monterey/jellyfish.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/monterey/jellyfish.jpg?raw=true" width = "150" height = "100" alt="jellyfish" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/monterey/penguins.png?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/monterey/penguins.jpg?raw=true" width = "150" height = "100" alt="penguins" /></a>
 
-<h2>Beijing</h2>
+<h3>Miami</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_1.jpg?raw=true" height = "100" alt="south_beach_1" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_2.jpg?raw=true" height = "100" alt="south_beach_2" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/south_beach_3.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/south_beach_3.jpg?raw=true" height = "100" alt="south_beach_3" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/miami/miami.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/miami/miami.jpg?raw=true" height = "100" alt="miami" /></a>
+
+<h3>seasons</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/spring.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/spring.jpg?raw=true" height = "100" alt="spring" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/fall.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/fall.jpg?raw=true" height = "100" alt="fall" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/summer.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/summer.jpg?raw=true" height = "100" alt="summer" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/seasons/winter.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/seasons/winter.jpg?raw=true" height = "100" alt="winter" /></a>
+
+
+<h2>China</h2>
+<h3>Beijing</h3>
 <p>Peking University</p>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/peking_university_hall.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/peking_university_hall.jpg?raw=true" width = "150" height = "100" alt="peking_university_hall" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/graduation_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_1.jpg?raw=true" width = "133" height = "100" alt="graduation_1" /></a>
@@ -54,8 +63,14 @@ title: Gallery
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/weiming_lake_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_2.jpg?raw=true" width = "150" height = "100" alt="weiming_lake_2" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/boyata.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/boyata.jpg?raw=true" width = "150" height = "100" alt="boyata" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/night.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/night.jpg?raw=true" width = "133" height = "100" alt="night" /></a>
+<p>Gu Gong / Forbidden City / The Palace Museum</p>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/gugong_1.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/gugong_1.jpg?raw=true" height = "100" alt="gugong_1" /></a>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/beijing/gugong_2.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/gugong_2.jpg?raw=true" height = "100" alt="gugong_2" /></a>
 
-<h2>Anqing</h2>
+<h3>Hong Kong</h3>
+<a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/hongkong/hk_mountain_view.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/hongkong/hk_mountain_view.jpg?raw=true" height = "100" alt="hk_mountain_view" /></a>
+
+<h3>Anqing</h3>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/anqing_no1_middle_school.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/anqing_no1_middle_school.jpg?raw=true" width = "133" height = "100" alt="anqing_no1_middle_school" /></a> <!---4:3--->
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/lake.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lake.jpg?raw=true" width = "133" height = "100" alt="lake" /></a>
 <a href="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery_original/anqing/yangtze_river.jpg?raw=true"><img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/yangtze_river.jpg?raw=true" width = "133" height = "100" alt="yangtze_river" /></a> 
